[package]
name = "chaser-oxide"
version = "0.1.2"
rust-version = "1.75"
autotests = false
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Undetectable browser automation library"
authors = ["ccheshirecat"]
repository = "https://github.com/ccheshirecat/chaser-oxide"
keywords = ["chrome", "chromedriver", "puppeteer", "automation", "stealth"]
categories = ["web-programming", "api-bindings", "development-tools::testing"]

[dependencies]
async-tungstenite = "0.32.0"
serde = { version = "1", features = ["derive"] }
async-std = { version = "1", features = [
  "attributes",
  "unstable",
], optional = true }
futures = "0.3"
chromiumoxide_types = { path = "chromiumoxide_types", version = "0.8" }
chromiumoxide_cdp = { path = "chromiumoxide_cdp", version = "0.8" }
chromiumoxide_fetcher = { path = "chromiumoxide_fetcher", version = "0.8", default-features = false, optional = true }
serde_json = "1"
which = "8"
thiserror = "1"
url = "2"
base64 = "0.22"
fnv = "1"
futures-timer = "3"
cfg-if = "1"
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "time",
  "fs",
  "macros",
  "process",
], optional = true }
tracing = "0.1"
pin-project-lite = "0.2"
dunce = "1"
bytes = { version = "1", features = ["serde"], optional = true }
reqwest = { version = "0.12", default-features = false }
dashmap = "6"
rand = "0.8"
anyhow = "1"

[target.'cfg(windows)'.dependencies]
windows-registry = "0.5"

[dev-dependencies]
quote = "1"
proc-macro2 = "1"
chrono = "0.4.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }

[features]
default = ["tokio-runtime", "bytes"]
async-std-runtime = ["async-std", "async-tungstenite/async-std-runtime"]
tokio-runtime = ["tokio", "async-tungstenite/tokio-runtime"]
fetcher = []
bytes = ["dep:bytes"]
serde0 = []

# Temporary features until cargo weak dependencies bug is fixed
# See https://github.com/rust-lang/cargo/issues/10801
_fetcher-rustls-async-std = [
  "fetcher",
  "chromiumoxide_fetcher/_rustls-async-std",
]
_fetcher-rustls-tokio = ["fetcher", "chromiumoxide_fetcher/_rustls-tokio"]
_fetcher-native-async-std = [
  "fetcher",
  "chromiumoxide_fetcher/_native-async-std",
]
_fetcher-native-tokio = ["fetcher", "chromiumoxide_fetcher/_native-tokio"]

[[example]]
name = "wiki-async-std"
required-features = ["async-std-runtime"]

[[example]]
name = "fetcher-async-std"
required-features = ["async-std-runtime", "_fetcher-native-async-std"]

[[example]]
name = "fetcher"
required-features = ["_fetcher-native-tokio"]

[[test]]
name = "chromiumoxide_tests"
path = "tests/lib.rs"
harness = true

[workspace]
members = [
  "chromiumoxide_pdl",
  "chromiumoxide_types",
  "chromiumoxide_cdp",
  "chromiumoxide_fetcher",
]
